06 Apr 2006 PR# 53/tape: Bus-Tech compressed AWS file support - Fish
06 Apr 2006 PR# 70/tape: AWS tapes 2GB filesize limitation - Fish
05 Apr 2006 FINAL(?) SCSI tape mods: fix bsr/fsr in light of 01 Apr 2006
            w32stape fixes for utilities, tweak to auto-scsi-mount logic
            to eliminate(?) WIN32 drive query inefficiencies - Fish
05 Apr 2006 fix(?) panel.c to always refresh the New Panel display,
            fix minor New Panel device status painting glitch - Fish
01 Apr 2006 tapecopy: accept WIN32 "\\.\Tape0" filename, use blockid
            segment# for ext GUI progress msgs, rewind at exit - Fish
01 Apr 2006 Addt'l Win32 SCSI status fixes for utils; s/b ok now - Fish
27 Mar 2006 SCSI tape fixes (MAJOR COMMIT):  (Fish)
             1) serialize open/close processing
             2) support "YES" as valid AUTO_SCSI_MOUNT specification
                (uses default interval value, currently 5 seconds)
             3) "scsimount" panel command:
                 a) support '0' and 'yes'
                 b) don't issue "no active mount requests"
                    for tape drives without display feature
                 c) fix mount/unmount request detection
             4) process 'rewind' option at CLOSE, not open (oops)
             5) add devnum (with LCSS prefix) to most messages
             6) attempt to fix *nix issue of 'EOF' status not being set
                when BSR/FSR spaces over a tapemark
             7) reset 'blockid' to -1 and remove redundant update
                status call in BSF/FSF.
             8) reset 'curfilen' to 0 in rewind_scsitape (and 'blockid'
                to -1 if rewind fails)
             9) fix erase-gap and data-security-erase functions
                so they actually return an i/o status
            10) start automount thread (if AUTO_SCSI_MOUNT is specified)
                when tape is determined to be not mounted regardless
                of whether drive/device-type has display-feature